--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -15,7 +15,7 @@
 
   <mat-toolbar color="primary" class="navbar navbar-expand-lg navbar-light bg-light fixed">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">THE SHOPPIES</a>
+      <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active">THE SHOPPIES</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,10 +23,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Nomination</a>
+            <a class="nav-link" [routerLink]="['/nomination']" routerLinkActive="router-link-active">Nomination</a>
           </li>
         </ul>
         <form class="d-flex">
