completed nomination page requirements and implemented timer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,140 +3,11 @@
     <app-header></app-header>
   </section>
 
-<!-- <div class="px-5" style="background: rgb(131, 138, 141)">
-  <section id="banner">
-    <mat-grid-list cols="5" rowHeight="90vh">
-      <mat-grid-tile colspan="2" rowspan="1" style="background: rgb(131, 138, 141)">
-        <div class="container">
-
-          <mat-button-toggle-group name="timer" class="my-2" aria-label="Timer">
-            <mat-button-toggle value="01">01</mat-button-toggle>
-            <mat-button-toggle value="20">20</mat-button-toggle>
-            <mat-button-toggle value="15">15</mat-button-toggle>
-            <mat-button-toggle value="30">30</mat-button-toggle>
-          </mat-button-toggle-group>
-          <h1 class="my-4" style="font-size: 2.5rem; font-weight: 800;">
-            The Shoppies Nomination
-          </h1>
-          <p class="mx-auto px-1 mt-2 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Hic autem ex voluptatum pariatur esse eveniet laboriosam reprehenderit.
-            Aut, hic? Voluptate consequuntur similique consequatur architecto nulla!
-          </p>
-          <button mat-raised-button color="accent" [routerLink]="['/nomination']">Go to Nominations <mat-icon>playlist_add</mat-icon></button>
-        </div>
-      </mat-grid-tile>
-
-      <mat-grid-tile colspan="3" rowspan="1" style="background: rgb(126, 172, 126)">
-        <carousel   [images]="highlights"
-                    [objectFit]="'contain'"
-                    [cellsToScroll]="1" [cellsToShow]="2" [height]="500"
-                    [lightDOM]="true" [overflowCellsLimit]="1"
-                    [cellWidth]="'100%'"
-                    [arrowsOutside]="false"
-                    [autoplay]="true"
-                    [dots]="false"
-                    [loop]="true">
-        </carousel>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </section>
-
-  <section id="about">
-    <mat-grid-list cols="4" rowHeight="70vh">
-      <mat-grid-tile colspan="2" rowspan="1" style="background: rgb(131, 138, 141)">
-        <div class="container">
-          <div class="row">
-            <div class="col-6">
-              <mat-card class="my-2 text-center">
-                <button mat-fab color="primary" class="my-2" aria-label="Example icon button with a delete icon">
-                  <mat-icon>search</mat-icon>
-                </button>
-                <mat-card-content>
-                  <p>Search for movie of choice on the nominations page</p>
-                </mat-card-content>
-              </mat-card>
-            </div>
-            <div class="col-6">
-              <mat-card class="my-2 text-center">
-                <button mat-fab color="primary" class="my-2" aria-label="Example icon button with a delete icon">
-                  <mat-icon>add_task</mat-icon>
-                </button>
-                <mat-card-content>
-                  <p>From the search result, nominate movie of choice</p>
-                </mat-card-content>
-              </mat-card>
-            </div>
-            <div class="col-6">
-              <mat-card class="my-2 text-center">
-                <button mat-fab color="primary" class="my-2" aria-label="Example icon button with a delete icon">
-                  <mat-icon>replay_5</mat-icon>
-                </button>
-                <mat-card-content>
-                  <p>Repeat the steps above until you have had five(5) nominations</p>
-                </mat-card-content>
-              </mat-card>
-            </div>
-            <div class="col-6">
-              <mat-card class="my-2 text-center">
-                <button mat-fab color="primary" class="my-2" aria-label="Example icon button with a delete icon">
-                  <mat-icon>done_all</mat-icon>
-                </button>
-                <mat-card-content>
-                  <p>Submit your five(5) nominations</p>
-                </mat-card-content>
-              </mat-card>
-            </div>
-          </div>
-        </div>
-      </mat-grid-tile>
-
-      <mat-grid-tile colspan="2" rowspan="1" style="background: rgb(131, 138, 141)">
-        <div class="container">
-          <h1 class="my-4" style="font-size: 2rem; font-weight: 800;">
-            About The Shoppies Nomination
-          </h1>
-          <p class="mx-auto px-1 mt-2 mb-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Hic autem ex voluptatum pariatur esse eveniet laboriosam reprehenderit.
-            Aut, hic? Voluptate consequuntur similique consequatur architecto nulla!
-          </p>
-          <p class="mx-auto px-1 mt-2 mb-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Hic autem ex voluptatum pariatur esse eveniet laboriosam reprehenderit.
-            Aut, hic? Voluptate consequuntur similique consequatur architecto nulla!
-          </p>
-          <p class="mx-auto px-1 mt-2 mb-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Hic autem ex voluptatum pariatur esse eveniet laboriosam reprehenderit.
-            Aut, hic? Voluptate consequuntur similique consequatur architecto nulla!
-          </p>
-          <button mat-raised-button color="accent">Go to Nominations <mat-icon>playlist_add</mat-icon></button>
-        </div>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </section>
-
-  <section id="trends">
-    <mat-grid-list cols="1" rowHeight="50vh">
-      <mat-grid-tile colspan="1" rowspan="1" style="background: rgb(126, 172, 126)">
-        <div>
-
-        </div>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </section>
-</div> -->
-
   <div class="mx-5 px-3">
     <section class="py-3" id="banner" style="height: 90vh">
       <div class="row py-4">
         <div class="col-md-4 py-5">
-          <mat-button-toggle-group name="timer" class="my-2" aria-label="Timer">
-            <mat-button-toggle value="01">01</mat-button-toggle>
-            <mat-button-toggle value="20">20</mat-button-toggle>
-            <mat-button-toggle value="15">15</mat-button-toggle>
-            <mat-button-toggle value="30">30</mat-button-toggle>
-          </mat-button-toggle-group>
+          <app-timer></app-timer>
           <h1 class="my-4" style="font-size: 2rem; font-weight: 800;">
             The Shoppies Nomination
           </h1>
